--- a/config/database.yml
+++ b/config/database.yml
@@ -9,13 +9,10 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
-  database: tea
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  username: tea
-  password: TheEternalArchive
-  host: localhost
+  timeout: 5000
 
   # socket: /Applications/MAMP/tmp/mysql/mysql.sock
 
